--- a/Drop/Drop.csproj
+++ b/Drop/Drop.csproj
@@ -48,6 +48,7 @@
     <Compile Include="OutgoingFileRequest.cs" />
     <Compile Include="OutgoingTransmission.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistryDrop.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="TransmissionPartner.cs" />
