--- a/Drop/WindowsService1/Drop.Service.csproj
+++ b/Drop/WindowsService1/Drop.Service.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{3564993B-000B-4EED-AD95-8D682290D9AD}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsService1</RootNamespace>
-    <AssemblyName>WindowsService1</AssemblyName>
+    <RootNamespace>Drop.Service</RootNamespace>
+    <AssemblyName>DropService</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
