--- a/Drop/Drop.csproj
+++ b/Drop/Drop.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3016DA72-A656-47F0-AB32-C47D400CC1C2}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Drop</RootNamespace>
     <AssemblyName>Drop</AssemblyName>
@@ -46,21 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssemblyInfo.cs" />
     <Compile Include="IncomingFileRequest.cs" />
     <Compile Include="IncomingTransmission.cs" />
     <Compile Include="OutgoingFileRequest.cs" />
     <Compile Include="OutgoingTransmission.cs" />
-<<<<<<< HEAD
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ProjectInstaller.Designer.cs">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
-=======
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistryDrop.cs" />
->>>>>>> 232cf1fee56364ab54e1efe38079b05992691300
     <Compile Include="Session.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="ProtocolImplementation.cs" />
